--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "wilddog/server",
+  "name": "wilddogserver/huang",
   "type": "library",
   "description": "",
   "keywords": ["wilddog"],
