--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "authors": [
     {
       "name": "Jingxuang Huang",
-      "email": "",
+      "email": "237383368@qq.com",
       "homepage": "https://github.com/huangjingxuanaa/",
       "role": "Developer"
     }
