--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "wilddogserver/huang",
-  "type": "library",
+  "type": "package",
   "description": "",
   "keywords": ["wilddog"],
   "homepage": "https://github.com/huangjingxuanaa/wilddog-server",
@@ -17,5 +17,8 @@
     "php": ">=5.3.0"
   },
   "autoload": {
+    "psr-4": {
+      "Wilddog\\": "src/"
+    }
   }
 }
